[package]
authors = ["panicbit <panicbit.dev@gmail.com>", "Andre Bogus <bogusandre@gmail.com>"]
categories = ["development-tools::testing"]
description = "Derives quickcheck traits"
keywords = ["quickcheck", "testing", "derive", "macro"]
license = "MIT/Apache-2.0"
name = "quickcheck_derive"
readme = "README.md"
repository = "https://github.com/panicbit/quickcheck_derive"
version = "0.2.1"

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
synstructure = "0.12"

[dev-dependencies]
quickcheck = "0.9.2"
rand = "0.7"

[lib]
proc_macro = true
